--- a/src/main/resources/templates/depositarfondos.html
+++ b/src/main/resources/templates/depositarfondos.html
@@ -13,7 +13,8 @@
     <nav class="navbar navbar-expand-lg bg-black navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="/img/banco.png" alt="Logo" width="100" height="74" class="d-inline-block align-text-top logo-navbar">
+                <img src="/img/banco.png" alt="Logo" width="100" height="74"
+                     class="d-inline-block align-text-top logo-navbar">
             </a>
             <a class="cero navbar-brand text-warning" href="/">Alke Wallet</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -22,12 +23,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="uno nav-link active text-warning" aria-current="page" th:href="@{/menuprincipal}">Menú principal</a>
+                    <a class="uno nav-link active text-warning" aria-current="page" th:href="@{/menuprincipal}">Menú
+                        principal</a>
                     <a class="dos nav-link active text-warning" aria-current="page" th:href="@{/depositarfondos}">Depósito</a>
-                    <a class="tres nav-link active text-warning" aria-current="page" th:href="@{/retirarfondos}">Retirar Fondos</a>
-                    <a class="cuatros nav-link active text-warning" aria-current="page" th:href="@{/realizarTransferencia}">Transferencia</a>
-                    <a class="cuatro nav-link active text-warning" aria-current="page" th:href="@{/ultimosmov}">Últimos movimientos</a>
-                    <a class="cinco nav-link active text-warning" aria-current="page" th:href="@{/logout}">Cerrar sesión</a>
+                    <a class="tres nav-link active text-warning" aria-current="page" th:href="@{/retirarfondos}">Retirar
+                        Fondos</a>
+                    <a class="cuatros nav-link active text-warning" aria-current="page"
+                       th:href="@{/realizarTransferencia}">Transferencia</a>
+                    <a class="cuatro nav-link active text-warning" aria-current="page" th:href="@{/ultimosmov}">Últimos
+                        movimientos</a>
+                    <a class="cinco nav-link active text-warning" aria-current="page" th:href="@{/logout}">Cerrar
+                        sesión</a>
                 </div>
             </div>
         </div>
