--- a/src/main/resources/templates/retirarfondos.html
+++ b/src/main/resources/templates/retirarfondos.html
@@ -1,70 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Retirar Fondos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Retirar Fondos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body style="background: black;">
 <header>
-  <nav class="navbar navbar-expand-lg bg-black navbar-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <img src="/img/banco.png" alt="Logo" width="100" height="74" class="d-inline-block align-text-top logo-navbar">
-      </a>
-      <a class="cero navbar-brand text-warning" href="/">Alke Wallet</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="uno nav-link active text-warning" aria-current="page" th:href="@{/menuprincipal}">Menú principal</a>
-          <a class="dos nav-link active text-warning" aria-current="page" th:href="@{/depositarfondos}">Depósito</a>
-          <a class="tres nav-link active text-warning" aria-current="page" th:href="@{/retirarfondos}">Retirar Fondos</a>
-          <a class="cuatros nav-link active text-warning" aria-current="page" th:href="@{/realizarTransferencia}">Transferencia</a>
-          <a class="cuatro nav-link active text-warning" aria-current="page" th:href="@{/ultimosmov}">Últimos movimientos</a>
-          <a class="cinco nav-link active text-warning" aria-current="page" th:href="@{/logout}">Cerrar sesión</a>
+    <nav class="navbar navbar-expand-lg bg-black navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/img/banco.png" alt="Logo" width="100" height="74"
+                     class="d-inline-block align-text-top logo-navbar">
+            </a>
+            <a class="cero navbar-brand text-warning" href="/">Alke Wallet</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="uno nav-link active text-warning" aria-current="page" th:href="@{/menuprincipal}">Menú
+                        principal</a>
+                    <a class="dos nav-link active text-warning" aria-current="page" th:href="@{/depositarfondos}">Depósito</a>
+                    <a class="tres nav-link active text-warning" aria-current="page" th:href="@{/retirarfondos}">Retirar
+                        Fondos</a>
+                    <a class="cuatros nav-link active text-warning" aria-current="page"
+                       th:href="@{/realizarTransferencia}">Transferencia</a>
+                    <a class="cuatro nav-link active text-warning" aria-current="page" th:href="@{/ultimosmov}">Últimos
+                        movimientos</a>
+                    <a class="cinco nav-link active text-warning" aria-current="page" th:href="@{/logout}">Cerrar
+                        sesión</a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </nav>
+    </nav>
 </header>
 <main class="container-fluid mt-5">
-  <div class="formulario3 d-flex flex-column justify-content-center text-metallic-silver">
-    <h1 class="text-metallic-silver text-md-center p-2">Retirar Fondos</h1>
-    <form method="post" action="/retirarfondos">
-      <div class="form-group text-center">
-        <label for="monto" class="form-label text-secondary">Monto a Retirar:</label>
-        <input type="number" class="form-control" id="monto" name="monto" required>
-      </div>
-      <div class="form-group mt-3 text-center">
-        <button type="submit" class="btn btn-dark text-warning w-100">Retirar</button>
-      </div>
-    </form>
-  </div>
+    <div class="formulario3 d-flex flex-column justify-content-center text-metallic-silver">
+        <h1 class="text-metallic-silver text-md-center p-2">Retirar Fondos</h1>
+        <form method="post" action="/retirarfondos">
+            <div class="form-group text-center">
+                <label for="monto" class="form-label text-secondary">Monto a Retirar:</label>
+                <input type="number" class="form-control" id="monto" name="monto" required>
+            </div>
+            <div class="form-group mt-3 text-center">
+                <button type="submit" class="btn btn-dark text-warning w-100">Retirar</button>
+            </div>
+        </form>
+    </div>
 </main>
 <footer class="mt-5" style="background-color: black;">
-  <div class="copy">
-    <p class="parrafo text-warning mt-4">©COPYRIGHT_2024</p>
-  </div>
-  <div class="redes">
-    <a class="fb" href="https://web.facebook.com/" target="_blank">
-      <i class="bi bi-facebook text-warning"></i>
-    </a>
-    <a class="tw" href="https://twitter.com/" target="_blank">
-      <i class="bi bi-twitter-x text-warning"></i>
-    </a>
-    <a class="inta" href="https://www.instagram.com/" target="_blank">
-      <i class="bi bi-instagram text-warning"></i>
-    </a>
-    <a class="lin" href="https://www.linkedin.com/" target="_blank">
-      <i class="bi bi-linkedin text-warning"></i>
-    </a>
-  </div>
+    <div class="copy">
+        <p class="parrafo text-warning mt-4">©COPYRIGHT_2024</p>
+    </div>
+    <div class="redes">
+        <a class="fb" href="https://web.facebook.com/" target="_blank">
+            <i class="bi bi-facebook text-warning"></i>
+        </a>
+        <a class="tw" href="https://twitter.com/" target="_blank">
+            <i class="bi bi-twitter-x text-warning"></i>
+        </a>
+        <a class="inta" href="https://www.instagram.com/" target="_blank">
+            <i class="bi bi-instagram text-warning"></i>
+        </a>
+        <a class="lin" href="https://www.linkedin.com/" target="_blank">
+            <i class="bi bi-linkedin text-warning"></i>
+        </a>
+    </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
