--- a/src/main/resources/templates/ultimosmov.html
+++ b/src/main/resources/templates/ultimosmov.html
@@ -2,84 +2,77 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Últimos Movimientos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" th:href="@{/css/style.css}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Últimos Movimientos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 
 <body style="background: black;">
 
 <header>
-  <nav class="navbar navbar-expand-lg bg-black navbar-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" th:href="@{/}">
-        <img th:src="@{/img/banco.png}" alt="Logo" width="100" height="74"
-             class="d-inline-block align-text-top logo-navbar">
-      </a>
-      <a class="cero navbar-brand text-warning" th:href="@{/}">Alke Wallet</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="uno nav-link active text-warning" aria-current="page" th:href="@{/menuprincipal}">Menú principal</a>
-          <a class="dos nav-link active text-warning" aria-current="page" th:href="@{/depositarfondos}">Depósito</a>
-          <a class="tres nav-link active text-warning" aria-current="page" th:href="@{/retirarfondos}">Retirar Fondos</a>
-          <a class="cuatros nav-link active text-warning" aria-current="page" th:href="@{/realizarTransferencia}">Transferencia</a>
-          <a class="cuatro nav-link active text-warning" aria-current="page" th:href="@{/ultimosmov}">Últimos movimientos</a>
-          <a class="cinco nav-link active text-warning" aria-current="page" th:href="@{/logout}">Cerrar sesión</a>
+    <nav class="navbar navbar-expand-lg bg-black navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/img/banco.png" alt="Logo" width="100" height="74"
+                     class="d-inline-block align-text-top logo-navbar">
+            </a>
+            <a class="cero navbar-brand text-warning" href="/">Alke Wallet</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="uno nav-link active text-warning" aria-current="page" th:href="@{/menuprincipal}">Menú
+                        principal</a>
+                    <a class="dos nav-link active text-warning" aria-current="page" th:href="@{/depositarfondos}">Depósito</a>
+                    <a class="tres nav-link active text-warning" aria-current="page" th:href="@{/retirarfondos}">Retirar
+                        Fondos</a>
+                    <a class="cuatros nav-link active text-warning" aria-current="page"
+                       th:href="@{/realizarTransferencia}">Transferencia</a>
+                    <a class="cuatro nav-link active text-warning" aria-current="page" th:href="@{/ultimosmov}">Últimos
+                        movimientos</a>
+                    <a class="cinco nav-link active text-warning" aria-current="page" th:href="@{/logout}">Cerrar
+                        sesión</a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </nav>
+    </nav>
 </header>
 
-<section class="container-fluid mt-5">
-  <section class="formulario5 d-flex flex-column justify-content-center text-white mt-5">
-    <div>
-      <h1 class="text-secondary">Últimos Movimientos</h1>
-      <ul class="list-group border border-warning rounded">
-        <li class="list-group-item" th:each="movimiento : ${movimientos}">
-          <span th:text="${movimiento.descripcion}">Descripción del movimiento</span> - <span th:text="${movimiento.monto}">$0.00</span>
-        </li>
-      </ul>
-      <a th:href="@{/menuprincipal}" class="btn btn-dark my-md-3 text-warning mt-3">Volver al Menú Principal</a>
+<main class="container mt-5">
+    <div class="formulario3 d-flex flex-column justify-content-center text-metallic-silver">
+        <h1 class="text-light">Últimos Movimientos</h1>
+        <div class="table-responsive">
+            <table class="table table-dark table-striped">
+                <thead>
+                <tr>
+                    <th scope="col">Fecha</th>
+                    <th scope="col">Descripción</th>
+                    <th scope="col">Monto</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="movimiento : ${movimientos}">
+                    <td th:text="${#dates.format(movimiento.fecha, 'dd/MM/yyyy HH:mm')}"></td>
+                    <td th:text="${movimiento.descripcion}"></td>
+                    <td th:text="${movimiento.monto}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-  </section>
-</section>
+</main>
 
-<footer class="mt-5" style="background-color: black;">
-  <div class="logo">
-    <p class="parrafo text-warning">©Copyright_2024</p>
-  </div>
-  <div class="redes">
-    <a class="fb" href="https://web.facebook.com/" target="_blank">
-      <i class="bi bi-facebook text-warning"></i></a>
-    <a class="tw" href="https://twitter.com/" target="_blank">
-      <i class="bi bi-twitter-x text-warning"></i></a>
-    <a class="inta" href="https://www.instagram.com/" target="_blank">
-      <i class="bi bi-instagram text-warning"></i></a>
-    <a class="lin" href="https://www.linkedin.com/" target="_blank">
-      <i class="bi bi-linkedin text-warning"></i></a>
-  </div>
+<footer class="footer mt-auto py-3 bg-dark text-white-50">
+    <div class="container text-center">
+        <span>© 2024 AlkeWallet</span>
+    </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/js/script.js"></script>
 </body>
-
 </html>
